@@ -1,0 +1,2 @@
+./test/relaxng/307377_0.xml:1: element number: Relax-NG validity error : Element number failed to validate attributes
+./test/relaxng/307377_0.xml fails to validate
