@@ -1,0 +1,3 @@
+./test/relaxng/307377_1.xml:1: element number: Relax-NG validity error : Extra data in list: a
+./test/relaxng/307377_1.xml:1: element number: Relax-NG validity error : Element number failed to validate attributes
+./test/relaxng/307377_1.xml fails to validate
