@@ -1,0 +1,1 @@
+./test/relaxng/307377_2.xml validates
