@@ -1,0 +1,1 @@
+./test/relaxng/307377.rng validates
