@@ -1,0 +1,14 @@
+<element name="number" xmlns="http://relaxng.org/ns/structure/1.0">
+   <attribute name="val">
+      <list>
+         <oneOrMore>
+            <choice>
+               <value>1</value>
+               <value>2</value>
+               <value>3</value>
+            </choice>
+         </oneOrMore>
+      </list>
+   </attribute>
+   <text/>
+</element>
